# CacoEngine

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  README.md  cmake_install.cmake  mai.cpp  mina.cpp
.cache/clangd/index/: engine.cpp.B2DFD112F698CB26.idx  engine.hpp.481E5502ABC1B123.idx  main.cpp.BDB4E9A1986030B2.idx  objects.cpp.0AA8CA86D7DF2222.idx  objects.hpp.0223CA45336100B4.idx
docs/: QUICK_START.md  README.md
docs/chapters/: 01-engine-overview.md  02-architecture.md  03-objects-rendering.md
examples/: Makefile  README.md  asteroids.cpp  breakout.cpp  particle_demo.cpp  pong.cpp  snake.cpp
include/: :wa  a  application.hpp  box.hpp  collider.hpp  engine.hpp  key.hpp  objects.hpp  random.hpp  renderer.hpp  rigidbody.hpp  rigidmesh.hpp  rigidobject.hpp  rigidsprite.hpp  sprite.hpp  surface.hpp  texture.hpp  tools.hpp  vertex.hpp
src/: :  :Wa  :a  :wa   \  a  box.cpp  collider.cpp  engine.cpp  key.cpp  main.cpp  objects.cpp  renderer.cpp  rigidbody.cpp  rigidmesh.cpp  rigidobject.cpp  rigidsprite.cpp  sprite.cpp  surface.cpp  texture.cpp  tools.cpp  vertex.cpp
